--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="Style/DuckHunter.css">
 </head>
 <body>
-    <canvas id="myCanvas">
+    <canvas id="myCanvas" width="1024" height="768">
 
     </canvas>
 
+    <script src="Script/GameEntities.js"></script>
     <script src="Script/DuckHunter.js"></script>
 </body>
 </html>
